[ES-D06] Harden authority bridge and component validation